--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>PEB</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("Acq4xwSB6GLpy7ZLg");
+      })();
+    </script>
   </head>
   <body>
     <div id="fb-root"></div>
